<!--
  ~       Copyright (C) 2020.  jx3box.com
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">剑三魔盒</string>
    <string name="app_slogan">享受游戏的乐趣</string>
    <string name="skip_intro">跳过</string>
    <string name="net_error">网络错误</string>
    <string name="register_error">注册失败</string>
    <string name="register_success">注册成功,请去邮箱验证</string>
    <string name="login_error">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="password">密码</string>
    <string name="username">邮箱地址</string>
    <string name="login">登录</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="github">github</string>
    <string name="wechat">微信</string>
    <string name="register">注册</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="launch_dialog">
        感谢您对本软件的支持!我们非常重视您的个人信息和隐私保护。
        为了更好地保障您的个人权益，在您使用我们的产品前，
        请务必审慎阅读《隐私政策》和《用户协议》内的所有条款，
        尤其是:\n
        1.我们对您的个人信息的收集/保存/使用/对外提供/保护等规则条款，以及您的用户权利等条款;\n
        2. 约定我们的限制责任、免责条款;\n
        3.其他以颜色或加粗进行标识的重要条款。\n
        如您对以上协议有任何疑问，
        可通过人工客服或发邮件至admin@jx3box.com与我们联系。
        您点击“同意并继续”的行为即表示您已阅读完毕并同意以上协议的全部内容。
        如您同意以上协议内容，请点击“同意并继续”，开始使用我们的产品和服务!
    </string>
    <string name="disagree">不同意</string>
    <string name="agree">同意并继续</string>
    <string name="licence_privacy">用户协议与隐私政策</string>
    <string name="tools">魔盒</string>
    <string name="bbs">茶馆</string>
    <string name="mine">我</string>
    <string name="home_search_hint">搜索你想要的内容</string>
    <string name="token_illegal">令牌不合法</string>
    <string name="column_license">开源协议</string>
    <string name="column_feedback">意见反馈</string>
    <string name="column_favorites">我的收藏</string>
    <string name="column_topic">题库贡献</string>
    <string name="column_entry">词条贡献</string>
    <string name="column_wiki">百科贡献</string>
    <string name="column_works">我的作品</string>
    <string name="sendto">mailto:admin@jx3box.com</string>
    <string name="mail_topic">剑三魔盒App反馈</string>
    <string name="cms_error">文章不存在</string>
    <string name="macro">云端宏</string>
    <string name="jx3dat">插件数据</string>
    <string name="dungeon">副本数据</string>
    <string name="bps">职业攻略</string>
    <string name="diy_face">捏脸数据</string>
    <string name="home">家园数据</string>
    <string name="tools_tutorials">工具教程</string>
    <string name="a_few_seconds_ago">%1$s秒前</string>
    <string name="a_few_minutes_ago">%1$s分钟前</string>
    <string name="a_few_hours_ago">%1$s小时前</string>
    <string name="a_few_days_ago">%1$s天前</string>
    <string name="no_title">无标题</string>
    <string name="see_more">查看更多＞＞</string>
    <string name="tools_macro">云端宏</string>
    <string name="tools_jx3dat">插件数据</string>
    <string name="tools_bps">职业攻略</string>
    <string name="tools_sort_data_of_study">数据攻略</string>
    <string name="tools_sort_fb">副本专栏</string>
    <string name="tools_fb">副本攻略</string>
    <string name="tools_cj">成就百科</string>
    <string name="tools_npc_data">NPC数据</string>
    <string name="tools_skill_data">技能数据</string>
    <string name="tools_fb_drop">副本掉落</string>
    <string name="tools_gem">瑰石列表</string>
    <string name="tools_sort_tool">实用工具</string>
    <string name="tools_servers">开服监控</string>
    <string name="tools_price">金价走势</string>
    <string name="tools_furniture">家具大全</string>
    <string name="tools_flower">实时花价</string>
    <string name="tools_house_share">家园分享</string>
    <string name="tools_face_share">捏脸分享</string>
    <string name="tools_sort_tripartite">三方工具</string>
    <string name="tools_j3pz">配装器</string>
    <string name="tools_speed">急速阈值</string>
    <string name="tools_dps">DPS模拟</string>
    <string name="tools_keju">科举题库</string>
    <string name="tools_qiyu">奇遇查询</string>
    <string name="tools_team">团队大厅</string>
    <string name="tools_title">魔盒矩阵</string>
    <string name="share_succeed">分享成功</string>
    <string name="wx_result_error_undefined">未识别微信返回类型%1$s</string>
    <string name="user_cancel">用户取消</string>
    <string name="oauth_refuse">授权被拒绝</string>
    <string name="undefined_error">未知错误</string>
    <string name="wechat_uninstall">您手机尚未安装微信或者版本过低</string>
    <string name="qq_uninstall">您手机尚未安装QQ或者版本过低</string>
    <string name="network_error">没有网络连接</string>
    <string name="article_url">%1$s?pid=%2$s</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="works">作品</string>
    <string name="author">作者</string>
    <string name="cj">成就</string>
    <string name="goods">物品</string>
    <string name="wiki">百科</string>
    <string name="hot_macro">热门宏</string>
    <string name="hot_dat">热门插件</string>
    <string name="novice">新手</string>
    <string name="advanced">进阶</string>
    <string name="chosen">精选</string>
    <string name="best">骨灰</string>
    <string name="filter">筛选</string>
    <string name="filter_all">全部</string>
    <string name="filter_all_subtitle">All</string>
    <string name="filter_experience">玩法心得</string>
    <string name="filter_experience_subtitle">Experience</string>
    <string name="filter_memory">江湖回忆</string>
    <string name="filter_memory_subtitle">Memory</string>
    <string name="filter_media">同人影音</string>
    <string name="filter_media_subtitle">Media</string>
    <string name="filter_discuz">交流反馈</string>
    <string name="filter_discuz_subtitle">Discuz</string>
    <string name="filter_idea">反馈建议</string>
    <string name="filter_idea_subtitle">Idea</string>
    <string name="filter_male">成男</string>
    <string name="filter_male_subtitle">Male</string>
    <string name="filter_female">成女</string>
    <string name="filter_female_subtitle">Female</string>
    <string name="filter_boy">正太</string>
    <string name="filter_boy_subtitle">Boy</string>
    <string name="filter_loli">萝莉</string>
    <string name="filter_loli_subtitle">Loli</string>
    <string name="message_user">用户消息</string>
    <string name="message_official">官方消息</string>
    <string name="message_detail">消息详情</string>
    <string name="cj_column_num">(%s)</string>
    <string name="revision_time">修订时间:%s</string>
    <string name="prefix_name">称号前缀:%s</string>
    <string name="postfix_name">称号后缀:%s</string>

    <string-array name="article_type">
        <item>@string/bbs</item>
        <item>@string/dungeon</item>
        <item>@string/jx3dat</item>
        <item>@string/bps</item>
        <item>@string/tools_tutorials</item>
    </string-array>
</resources>