<?xml version="1.0" encoding="utf-8"?><!--
  ~       Copyright (C) 2020.  jx3box.com
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/navigation_bbs">

    <fragment
        android:id="@+id/navigation_bbs"
        android:name="com.jx3box.ui.main.fragment.bbs.BbsFragment"
        android:label="@string/bbs"
        tools:layout="@layout/fragment_bbs" />

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.jx3box.ui.main.fragment.tools.ToolsFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.jx3box.ui.main.fragment.mine.MineFragment"
        android:label="@string/mine"
        tools:layout="@layout/fragment_mine" />
</navigation>