<?xml version="1.0" encoding="utf-8"?><!--
  ~       Copyright (C) 2020.  jx3box.com
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:background="@drawable/shape_search"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSearchType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_10"
                android:text="@string/works"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/sp_14"
                app:drawableEndCompat="@drawable/icon_menu_drop" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/home_search_hint"
                android:imeOptions="actionSearch"
                android:padding="@dimen/dp_6"
                android:singleLine="true"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_history"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/imgClearHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_clear" />

            <com.jx3box.view.widget.FlowLayout
                android:id="@+id/flowHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgClearHistory"
                android:layout_marginTop="@dimen/dp_10" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlMacro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">

            <TextView
                android:id="@+id/tvHotMacro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_4"
                android:text="@string/hot_macro"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:drawableEndCompat="@drawable/icon_hot" />

            <com.jx3box.view.widget.FlowLayout
                android:id="@+id/flowMacro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHotMacro"
                android:layout_marginTop="@dimen/dp_10" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlDat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">

            <TextView
                android:id="@+id/tvHotDat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_4"
                android:text="@string/hot_dat"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:drawableEndCompat="@drawable/icon_hot" />

            <com.jx3box.view.widget.FlowLayout
                android:id="@+id/flowDat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHotDat"
                android:layout_marginTop="@dimen/dp_10" />
        </RelativeLayout>

    </LinearLayout>
</layout>