<?xml version="1.0" encoding="utf-8"?><!--
  ~       Copyright (C) 2020.  jx3box.com
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import
            type="com.jx3box.R"
            alias="appR" />

        <variable
            name="viewModel"
            type="com.jx3box.ui.splash.SplashViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_app" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/img"
                android:text="@string/app_name"
                android:textColor="#5C606F"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_alignStart="@+id/name"
                android:text="@string/app_slogan" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/mImgSplash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/app"
            app:imageUrl="@{viewModel.advertUrl}"
            placeholder="@{appR.drawable.bg_advertising}" />

        <TextView
            android:id="@+id/mTvSkip"
            android:layout_width="70dp"
            android:layout_height="26dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_splash_shape"
            android:gravity="center"
            android:text="@string/skip_intro"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>
</layout>